.gitignore déplacé dans les dossiers de TP

--- a/TP2/SoftDesignTraining.uproject
+++ b/TP2/SoftDesignTraining.uproject
@@ -14,5 +14,16 @@
 				"NavigationSystem"
 			]
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "Bridge",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Mac",
+				"Linux"
+			]
+		}
 	]
 }
